Binary-level interface injection